--- a/index.css
+++ b/index.css
@@ -93,6 +93,7 @@ main{
     width: 45px;
 }
 .block-main select{
+    width: 45px;
     padding: 15px;
     border-radius: 10px;
     font-size: 16px;
